fixed WCAG color contrast

--- a/src/sass/_parts/__prepend.scss
+++ b/src/sass/_parts/__prepend.scss
@@ -5,7 +5,7 @@
     --green: #2C5214;
     --sand: #d9d5d3;
     --brown: #524034;
-    --lightblue: #1a9fe6;
+    --lightblue: #68C1EE;
     --lightgray: #ebebeb;
     --midgray: #b1b1b1;
     --darkgray: #333;
